--- a/q/274938.html
+++ b/q/274938.html
@@ -26,17 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>014</td><td>05AB1E</td><td>240813T091741Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274956#274956">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>013</td><td>05AB1E</td><td>240813T091741Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274956#274956">Kevin Cr</a></td></tr>
 <tr d-ix="1"><td>033</td><td>Charcoal</td><td>240813T002546Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274948#274948">Neil</a></td></tr>
 <tr d-ix="2"><td>044</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
 <tr d-ix="3"><td>051</td><td>Python</td><td>240812T234108Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274945#274945">Lucenapo</a></td></tr>
 <tr d-ix="4"><td>009</td><td>Vyxal</td><td>240812T231156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274944#274944">emanresu</a></td></tr>
 <tr d-ix="5"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 14 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>∞&lt;IôIδôOIô€øO˜
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>14</s> 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>∞&lt;IôIô€øO˜IôO
 </code></pre>
-<p>Inputs in the order <span class="math-container">\$W,X,Y\$</span>.
+<p>-1 byte thanks to <em>@emanresuA</em>.</p>
+<p>Inputs in the order <span class="math-container">\$W,Y,X\$</span>.
 Outputs the infinite sequence.</p>
 <p><a href="https://tio.run/##yy9OTMpM/f//Ucc8G8/DWzzPbTm8xR/IeNS05vAO/9Nz/v83NOIy5jIBAA" rel="nofollow noreferrer">Try it online.</a></p>
 <p><strong>Explanation:</strong></p>
@@ -44,14 +45,13 @@ Outputs the infinite sequence.</p>
 <pre class="lang-python prettyprint-override"><code>∞              # Push an infinite positive list: [1,2,3,...]
  &lt;             # Decrease each by 1 to a non-negative infinite list: [0,1,2,...]
   Iô           # Split it into groups of the first input W
-     δ         # Map over each inner list:
-    I ô        #  Split it into groups of the second input X
-       O       # Sum each inner-most list
-        Iô     # Split it into groups of the third input Y
-          €    # Map over each inner matrix:
-           ø   #  Zip/transpose; swapping rows/columns
-            O  # Sum each inner-most list again
-             ˜ # Flatten the infinite list of lists
+    Iô         # Split those into groups of the second input Y
+      €        # Map over each inner matrix:
+       ø       #  Zip/transpose; swapping rows/columns
+        O      # Sum each inner-most list
+         ˜     # Flatten the infinite list of lists
+          Iô   # Split it into groups of the third input X
+            O  # Sum each inner list again
                # (after which the infinite list is lazily output implicitly)
 </code></pre>
 </div>
