--- a/q/274938.html
+++ b/q/274938.html
@@ -26,14 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>013</td><td>05AB1E</td><td>240813T091741Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274956#274956">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>033</td><td>Charcoal</td><td>240813T002546Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274948#274948">Neil</a></td></tr>
-<tr d-ix="2"><td>044</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
-<tr d-ix="3"><td>051</td><td>Python</td><td>240812T234108Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274945#274945">Lucenapo</a></td></tr>
+<tr d-ix="0"><td>049</td><td>Python</td><td>240812T234108Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274945#274945">Lucenapo</a></td></tr>
+<tr d-ix="1"><td>013</td><td>05AB1E</td><td>240813T091741Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274956#274956">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>033</td><td>Charcoal</td><td>240813T002546Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274948#274948">Neil</a></td></tr>
+<tr d-ix="3"><td>044</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
 <tr d-ix="4"><td>009</td><td>Vyxal</td><td>240812T231156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274944#274944">emanresu</a></td></tr>
 <tr d-ix="5"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>14</s> 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1>Python, <s>58</s> <s>54</s> <s>53</s> <s>51</s> 49 bytes</h1>
+<p>Here <code>w</code> means the number of <code>x</code>-wide chunks in a row.</p>
+<p>This gives the sum of the <code>n</code>-th block (<code>n</code> starting from 0)</p>
+<pre><code>lambda x,y,w,n:x*y*~(x*~(n*y*2-(n%w*2-w)*~-y))//2
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>14</s> 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>∞&lt;IôIô€øO˜IôO
 </code></pre>
 <p>-1 byte thanks to <em>@emanresuA</em>.</p>
@@ -55,24 +61,18 @@ Outputs the infinite sequence.</p>
                # (after which the infinite list is lazily output implicitly)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>38</s> 33 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>38</s> 33 bytes</h1>
 <pre><code>ＮθＮηＮζＮεＩ÷××θη⊖×θ⊕⁻⊗×εη×⁻⊗﹪εζζ⊖η²
 </code></pre>
 <p><a href="https://tio.run/##XY27DsIwDEV3viJjKoUF8Rg60qVDKwZ@oE0sJVLi0Dw69OdDAohCPVzp2OfKXA6O20Gn1OIjhj6aERydqnr3y3LDy4Yh880pDPQ6@EBbDI2alQB6Vwb8JydGZMVIA9yBAQwg1kOL67JTGD1tbBz1V4HSzeU3/RudFVHboixFWTY/cu81jBxy1ikdyYmcySXtZ/0E" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes <code>X, Y, W/X, n</code> as inputs. Explanation: Looks like I've found the same closed formula. Really, verbose mode says it all, except of course the variables have to be called <code>q, h, z, and e</code> instead, just in case you want to save 8 bytes by requiring input in JSON format. Edit: Saved 5 bytes by porting @xnor's golf to @Lucenaposition's answer.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s>48</s> <s>47</s> <s>46</s> <s>43</s> <s>42</s> <s>48</s> <s>46</s> <s>45</s> 44 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s>48</s> <s>47</s> <s>46</s> <s>43</s> <s>42</s> <s>48</s> <s>46</s> <s>45</s> 44 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;x*y*(n*x*y+(--y*w+x-1)/2-n*x%w*y)
 </code></pre>
 <p><a href="https://tio.run/##DcjRCoMwDEDRrxGSNJlzsgeZ3b@Is6MizdBh26@vfbkH7jqd0zHv/veXoJ@lOFsgcOLMEe07USYIVDEgkimaJB22D6mviZSxON3B2/vLj12NMThrOHRbbpt@wYHnnp88IJYL" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a> -3ish thanks to Arnauld, -1 thanks to xnor, hopefully now actually works. There might be a shorter version taking w/x instead.</p>
 <p>Simple numeric formula. They say a picture speaks a thousand words:</p>
 <p><a href="https://i.sstatic.net/53cUFrDH.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/53cUFrDH.png" alt="enter image description here" /></a></p>
-</div>
-<div id="pu3" class="pu"><h1>Python, <s>58</s> <s>54</s> <s>53</s> 51 bytes</h1>
-<p>Here <code>w</code> means the number of <code>x</code>-wide chunks in a row.</p>
-<p>This gives the sum of the <code>n</code>-th block (<code>n</code> starting from 0)</p>
-<pre><code>lambda x,y,w,n:x*y*(x*(n*y*2-(n%w*2-w)*~-y+1)-1)//2
-</code></pre>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 9 bytes</h1>
 <pre><code>Þ∞‹ẇẇṠfẇṠ
