--- a/q/210976.html
+++ b/q/210976.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>042</td><td>Rust</td><td>240813T001456Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/274946#274946">bzr</a></td></tr>
+<tr d-ix="0"><td>041</td><td>Rust</td><td>240813T001456Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/274946#274946">bzr</a></td></tr>
 <tr d-ix="1"><td>010</td><td>?Q?</td><td>240807T151257Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/274756#274756">Gilbert </a></td></tr>
 <tr d-ix="2"><td>014</td><td>Befalse quirkster</td><td>240520T051650Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/273190#273190">Bubbler</a></td></tr>
 <tr d-ix="3"><td>024</td><td>Raku Perl 6 rakudo</td><td>240804T205604Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/274677#274677">bb94</a></td></tr>
@@ -162,11 +162,10 @@
 <tr d-ix="133"><td>034</td><td>Python 3</td><td>200912T132841Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/210981#210981">Jonathan</a></td></tr>
 <tr d-ix="134"><td>008</td><td>Pyth</td><td>200912T132447Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/210979#210979">Mukundan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org/" rel="nofollow noreferrer">Rust</a>, 42 bytes</h1>
-
-<pre class="lang-rust prettyprint-override"><code>fn main(){print!(&quot;L&quot;);loop{print!(&quot;ol&quot;);}}
+<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>42</s> 41 bytes</h1>
+<pre class="lang-rust prettyprint-override"><code>fn main(){print!(&quot;L&quot;);loop{print!(&quot;ol&quot;)}}
 </code></pre>
-<p><a href="https://tio.run/##KyotLvn/Py1PITcxM09Ds7qgKDOvRFFDyUdJ0zonP78ALpCfAxSprf3/HwA" rel="nofollow noreferrer" title="Rust – Try It Online">Try it online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMGCpaUlaboWNzXT8hRyEzPzNDSrC4oy80oUNZR8lDStc_LzC-AC-TlKmrW1EA1QfTD9AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://esolangs.org/wiki/%3FQ%3F" rel="nofollow noreferrer">?Q?</a>, 10 bytes</h1>
 <p>this is the code:</p>
