--- a/q/607.html
+++ b/q/607.html
@@ -244,11 +244,10 @@
 <tr d-ix="215"><td>029</td><td>Ruby</td><td>110206T171202Z</td><td><a href="https://codegolf.stackexchange.com/questions/607/find-the-factorial/614#614">Arnaud L</a></td></tr>
 <tr d-ix="216"><td>017</td><td>Haskell</td><td>110206T170331Z</td><td><a href="https://codegolf.stackexchange.com/questions/607/find-the-factorial/613#613">J B</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org/" rel="nofollow noreferrer">Rust</a>, 35 bytes</h1>
-
+<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 35 bytes</h1>
 <pre class="lang-rust prettyprint-override"><code>fn f(n:u32)-&gt;u32{(1..=n).product()}
 </code></pre>
-<p><a href="https://tio.run/##KyotLvmflqeQm5iZp6GpUA1ip2nkWZUaG2nq2gHJag1DPT3bPE29gqL8lNLkEg3N2v@1/wE" rel="nofollow noreferrer" title="Rust – Try It Online">Try it online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMGCpaUlaboWN5XT8hTSNPKsSo2NNHXtgGS1hqGenm2epl5BUX5KaXKJhmYtRClUB0wnAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1>Google Sheets, 26 Bytes</h1>
  
