--- a/q/274924.html
+++ b/q/274924.html
@@ -26,22 +26,42 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td>05AB1E</td><td>240813T084855Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274955#274955">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>040</td><td>R</td><td>240812T190722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274937#274937">pajonk</a></td></tr>
-<tr d-ix="2"><td>025</td><td>APLDyalog Unicode</td><td>240813T060050Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274954#274954">akamayu</a></td></tr>
-<tr d-ix="3"><td>011</td><td>Nekomata + 1</td><td>240813T041130Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274950#274950">alephalp</a></td></tr>
-<tr d-ix="4"><td>049</td><td>Retina 0.8.2</td><td>240812T223756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274943#274943">Neil</a></td></tr>
-<tr d-ix="5"><td>016</td><td>Charcoal</td><td>240812T214353Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274941#274941">Neil</a></td></tr>
-<tr d-ix="6"><td>013</td><td>Jelly</td><td>240812T181812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274936#274936">Jonathan</a></td></tr>
-<tr d-ix="7"><td>057</td><td>APL+WIN</td><td>240812T172556Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274934#274934">Graham</a></td></tr>
-<tr d-ix="8"><td>065</td><td>Setanta</td><td>240812T163243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274931#274931">bb94</a></td></tr>
-<tr d-ix="9"><td>107</td><td>Python</td><td>240812T163527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274932#274932">shape wa</a></td></tr>
-<tr d-ix="10"><td>055</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
-<tr d-ix="11"><td>034</td><td>JavaScript Node.js</td><td>240812T154332Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274930#274930">l4m2</a></td></tr>
-<tr d-ix="12"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
-<tr d-ix="13"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
+<tr d-ix="0"><td>189</td><td>Nibbles</td><td>240813T160923Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274958#274958">Dominic </a></td></tr>
+<tr d-ix="1"><td>015</td><td>05AB1E</td><td>240813T084855Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274955#274955">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>040</td><td>R</td><td>240812T190722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274937#274937">pajonk</a></td></tr>
+<tr d-ix="3"><td>025</td><td>APLDyalog Unicode</td><td>240813T060050Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274954#274954">akamayu</a></td></tr>
+<tr d-ix="4"><td>011</td><td>Nekomata + 1</td><td>240813T041130Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274950#274950">alephalp</a></td></tr>
+<tr d-ix="5"><td>049</td><td>Retina 0.8.2</td><td>240812T223756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274943#274943">Neil</a></td></tr>
+<tr d-ix="6"><td>016</td><td>Charcoal</td><td>240812T214353Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274941#274941">Neil</a></td></tr>
+<tr d-ix="7"><td>013</td><td>Jelly</td><td>240812T181812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274936#274936">Jonathan</a></td></tr>
+<tr d-ix="8"><td>057</td><td>APL+WIN</td><td>240812T172556Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274934#274934">Graham</a></td></tr>
+<tr d-ix="9"><td>065</td><td>Setanta</td><td>240812T163243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274931#274931">bb94</a></td></tr>
+<tr d-ix="10"><td>107</td><td>Python</td><td>240812T163527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274932#274932">shape wa</a></td></tr>
+<tr d-ix="11"><td>055</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
+<tr d-ix="12"><td>034</td><td>JavaScript Node.js</td><td>240812T154332Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274930#274930">l4m2</a></td></tr>
+<tr d-ix="13"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
+<tr d-ix="14"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 18 nibbles (9 bytes)</h1>
+<pre><code>,|,$~*%$3- 2/`@3
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWG3RqdFTqtFRVjHUVjPQTHIwhwlDZBRsNuAy5jLiMzLiMzLlMjblMTSASAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>An implementation of <a href="https://codegolf.stackexchange.com/a/274936/95126">Jonathan Allan's approach</a> of counting elements of <a href="https://oeis.org/A003605" rel="nofollow noreferrer">A003605</a> up to <code>n</code>: upvote that!</p>
+<pre><code>,|,$~*%$3- 2/`@3    # full program
+,|,$~*%$3- 2/`@3$$  # with implicit variables shown;
+,                   # return length of 
+  ,$                # 1..n
+ |                  # filtered to include only elements
+    ~               # for which result is zero for: 
+     *              #   product of 
+      %$3           #     element modulo 3
+                    #   and 
+         - 2        #     2 minus
+            /    $  #     first digit of
+             `@3$   #     element in base 3
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>_+3Bć©3αì®i¨}3ö
 </code></pre>
 <p><a href="https://tio.run/##ASEA3v9vc2FiaWX//18rM0LEh8KpM86xw6zCrmnCqH0zw7b//zA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##AUYAuf9vc2FiaWX/dnk/IiDihpIgIj95RP9fKzNCxIfCqTPOscOswq5pwqh9M8O2/yz/WzAsMSwyLDI2LDI3LDUzLDU0LDEzMzdd" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -63,7 +83,7 @@
                 # (which is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>41</s> 40 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>41</s> 40 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>`?`=\(n)`if`(n&lt;2,0,(k=?n-1)+!n%/%3-?1+k)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3NRLsE2xjNPI0EzLTEjTybIx0DHQ0sm3t83QNNbUV81T1VY117Q21szWh6qvSNAw0lRV07RQMuNI0DBFMIwjTkIsrJ7GgIKdSw9DK0EwnTZOLSxkoaQaVNQfzzKE8CxDP1BjCMzID80ygPLBKQ2NjqFozCwuICxYsgNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -72,13 +92,13 @@
 <pre class="lang-r prettyprint-override"><code>f=\(n)`if`(n&lt;2,0,f(n-1)+(n%/%3==f(1+f(n-1))))
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>25 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu3" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>25 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>Direct implementation of the problem description.</p>
 <pre><code>(3⊥3|(-1=⊃)↓+⍨@1)3⊥⍣¯1⌈∘1
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=0zB@1LXUuEZD19D2UVez5qO2ydqPelc4GGqCxB/1Lj603vBRT8ejjhmGAA&amp;f=Szu0wkDBUMFIwchMwchcwdRYwdREwdDY2BwA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-1</code>, 11 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-1</code>, 11 bytes</h1>
 <pre><code>3D3UXᶜi3bᵖ≥
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpKuoVLsgqWlJWm6FhuNXYxDIx5um5NpnPRw67RHnUuXFCclF0NlF2wz4DLkMuIyMuMyMucyNeYyNeEyNDY2h8gCAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -93,7 +113,7 @@
 </code></pre>
 <p><code>-1</code> prints the first valid solution.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 49 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 49 bytes</h1>
 <pre><code>.+
 $*#
 #
@@ -119,7 +139,7 @@ $1$.2
 </code></pre>
 <p>Count those starting with <code>2</code> or ending in <code>0</code> (but taking care not to count <code>0</code> itself or to double-count numbers that both start with <code>2</code> and and in <code>0</code>).</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
 <pre><code>ＩＬΦＥＮ↨⊕ι³¬∧⌕ι²⊟ι
 </code></pre>
 <p><a href="https://tio.run/##JYvBCoNADER/xWMEe2j34MGTLRQKKv5Cuoa6sGaXNfr7MdA5PJjHjF@x@IRRdS6BBV64CwzEP1nhHaJQgREzfDgfMh3b13rdVE/cyZwvtBELLRBMutowJYGeF/saQlM9zM0p2@CfTvXuXKu3M14" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Uses @JonathanAllan's observation that <code>f(a)</code> is the number of members of <code>A003605</code> between <code>1</code> and <code>a</code> inclusive.</p>
@@ -142,7 +162,7 @@ $1$.2
                     Implicitly print
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>æḟ©3Ḥạ+⁺_®)»ċ
 </code></pre>
 <p>A monadic Link that accepts a non-negative integer, <span class="math-container">\$N\$</span>, and yields the value of <span class="math-container">\$f(n)\$</span>.</p>
@@ -162,12 +182,12 @@ $1$.2
             ċ - count occurrences of {N}
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1>APL+WIN, 57 bytes</h1>
+<div id="pu8" class="pu"><h1>APL+WIN, 57 bytes</h1>
 <pre><code>⍎∊((n←⎕)=0)↑⊂'n⋄→'⋄3⊥(-i)↓((1+i←2|↑n),1↓n←((⌊1+3⍟n)⍴3)⊤n)
 </code></pre>
 <p><a href="https://tio.run/##FU1LCsIwFNznIn2hFppG7coDCIpnKJVKIUShK8GVSC3RFj@4dqM38ERzkfiymHnDfHjFziTrfWG2m6Q0RdPUpcfwWi7Q3rRgNV@xUgLdufLoB3SOyLLFkZylEu0d7hhZXE5oHxEfDfelpObkSaTimrvZgWtWjhR7YUuEq1OxRv@2Ev1PS7iPlZ6fCF@JVFRCMbKAaaCcaaIDjUOmdf4H" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 65 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 65 bytes</h1>
 <pre><code>gniomh(n){s:=1nuair-a s*3&lt;=n s*=3toradh(n|0&amp;n/s&lt;2&amp;(n+s)//3)|n-s}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICImoeWCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
@@ -181,7 +201,7 @@ $1$.2
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 107 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 107 bytes</h1>
 <p>Incredibly slow for non-low <code>n</code>, thanks to generating exponentially more terms than needed. For testing purposes, you can get around that by adding <code>if len(a)&gt;n:break</code> to the for loop.</p>
 <pre class="lang-python prettyprint-override"><code>def f(n,s=1,r=range):
  a=[0,0]
@@ -215,7 +235,7 @@ $1$.2
     return arr[n]
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="noreferrer">Python 3</a>, 55 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="noreferrer">Python 3</a>, 55 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n,c=1:n&gt;c and f(n,c*3)or[0,(n+c)//3,n-c][n//c]
 </code></pre>
@@ -228,26 +248,26 @@ $1$.2
 <p><a href="https://tio.run/##LcqxCoAgFAXQub7C8T0qRCQIwf7FMEuoq4hLX28NbWc4@alngl5yaS3Yy92bdwIGq3LwBCm1tYHUEAiTYuYfLaQiICJEcTh2UjObvsslohLG7zC3Fw" rel="noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>Recursive magic based on the original definition, copied from <a href="https://codegolf.stackexchange.com/a/274930/20260">l4m2's JS answer</a>.</p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 34 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://nodejs.org" rel="noreferrer">JavaScript (Node.js)</a>, 34 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&lt;2?0:!(n/3^f(1+f(--n)))+f(n)
 </code></pre>
-<p><a href="https://tio.run/##NcpNDoJADIbhPacYd9PwLzuleAJPQDAZgSpm0hogxgV3H2c0rt4n/fowL7P08/RcU5ZhdI6QseF6fyoOO815dSFdxqTTlAHAg8ERIUWE2iRXwIba1qPr8I9tI/puEcms9DS8sTgqn7osPOLYE6JeeBE7ZlZu4SVRFAKhP4FCVGez3jOyInO45RWA@wA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##NcpNDoJADIbhPacYd9PwLzuleAJPQDAZgSpm0hogxgV3H2c0rt4n/fowL7P08/RcU5ZhdI6QseF6fyoOO815dSFdxqTTlAHAg8ERIUWE2iRXwIba1qPr8I9tI/puEcms9DS8sTgqn7osPOLYE6JeeBE7ZlZu4SVRFAKhP4FCVGez3jOyInO45RWA@wA" rel="noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Self is slow, but can save states to fasten</p>
-<h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 47 bytes</h1>
+<h1><a href="https://nodejs.org" rel="noreferrer">JavaScript (Node.js)</a>, 47 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(n,i=1)=&gt;n&lt;i?n-i/3|0:n&lt;2*i?n/3+i/3|0:f(n,i*3)
 </code></pre>
-<p><a href="https://tio.run/##JYpBDsIgEEX3noJlp7SFys4yegIPQdqiGDJjaGNceHeEdPXe/3kv93HbnMJ774mXNWePDXUBR8Ar2XCjPijz0xey57YsZeSxfa1aA9lzEk1YvqgnUWBHXUTKonCamTaO6xD5UZNO@AqoPAwEori7/Tn4yJzqpwxA/gM" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##JYpBDsIgEEX3noJlp7SFys4yegIPQdqiGDJjaGNceHeEdPXe/3kv93HbnMJ774mXNWePDXUBR8Ar2XCjPijz0xey57YsZeSxfa1aA9lzEk1YvqgnUWBHXUTKonCamTaO6xD5UZNO@AqoPAwEori7/Tn4yJzqpwxA/gM" rel="noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Fast, not sure relation between Arnauld's solution</p>
 </div>
-<div id="pu12" class="pu"><h1>JavaScript (ES6), 48 bytes</h1>
+<div id="pu13" class="pu"><h1>JavaScript (ES6), 48 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(n,k=1)=&gt;n&lt;k*3?n/k^1?n&amp;&amp;n-k:(n+k)/3|0:f(n,k*3)
 </code></pre>
 <p><a href="https://tio.run/##dcxLCsIwFEDRuavIqCS1NZ9n01CM3YlQaiOa8iJWHLn3iDQjg@NzubfhNSzj43p/1hjOU4zOUqy8lcwe8eBL6JH7k@yxKLD2HcWtZxzeonPfrAQWx4BLmKfdHC7UUUKIYIxwTsQmE/lX1CoyE6WTtDm1iUxGDaykdE77RL9DCZCG2pj4AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 15 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 15 bytes</h1>
 <pre><code>[3τḣ$⌐⇧~p$ċßṪ3β
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJ+IiwiIiwiWzPPhOG4oyTijJDih6d+cCTEi8Of4bmqM86yIiwiIiwiMCAtPiAwXG4xIC0+IDBcbjIgLT4gMVxuMjYgLT4gMTdcbjI3IC0+IDE4XG41MyAtPiAyNlxuNTQgLT4gMjdcbjEzMzcgLT4gNjg4Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
