--- a/q/274938.html
+++ b/q/274938.html
@@ -38,10 +38,30 @@
 <div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 87 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(x,y,w,`[`=matrix,s=colSums)repeat print(s(s(((y*w*F+1):(y*w*(F&lt;-F+1))-1)[x])[y,b=T]))
 </code></pre>
-<p>Not user friendly, just to see the source and the bytecount: <a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3w2M0KnQqdcp1EqITbHMTS4oyK3SKbZPzc4JLc4s1i1ILUhNLFAqKMvNKNIqBUEOjUqtcy03bUNMKzNJws9EF8TR1DTWjK2I1oyt1kmxDYjU1IcZvStMw1jHRMTTS5ErTMNQx1DGDSixYAKEB" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>User-friendly version: <a href="https://tio.run/##jczPCoJAEAbwu08RdpmxERr/BEV79QXqZoImZQu6hq6oT79t3YOd7/J98GMG0wjznFStZa9goZVmKvNSdJUe5EKjqPv2MnUjzi/ZPiA7M@PmPUilYbQBWIM5yHaMp1@zIPwuDBnzpcB8pbu4FoimrjT42z93Uz56DcSUEEfoeS44tTjaO2ImpoOjtW8pSpxx6o5ji4/ONrHWfAA" rel="nofollow noreferrer" title="R – Try It Online">Test cases at TIO</a></p>
-<h4>Explanation:</h4>
-<p>(follows)</p>
+<p>Just to see the source and the bytecount: <a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3w2M0KnQqdcp1EqITbHMTS4oyK3SKbZPzc4JLc4s1i1ILUhNLFAqKMvNKNIqBUEOjUqtcy03bUNMKzNJws9EF8TR1DTWjK2I1oyt1kmxDYjU1IcZvStMw1jHRMTTS5ErTMNQx1DGDSixYAKEB" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>A user-friendly version: <a href="https://tio.run/##jczPCoJAEAbwu08RdpmxERr/BEV79QXqZoImZQu6hq6oT79t3YOd7/J98GMG0wjznFStZa9goZVmKvNSdJUe5EKjqPv2MnUjzi/ZPiA7M@PmPUilYbQBWIM5yHaMp1@zIPwuDBnzpcB8pbu4FoimrjT42z93Uz56DcSUEEfoeS44tTjaO2ImpoOjtW8pSpxx6o5ji4/ONrHWfAA" rel="nofollow noreferrer" title="R – Try It Online">Test cases at TIO</a></p>
+<p>A function that takes <code>x</code>,<code>y</code> and <code>w</code> as an input and outputs indefinetely the sequence of the sums.</p>
+<h4>Explanation (a naive approach):</h4>
+<p>Let's take <span class="math-container">\$X=3\$</span>, <span class="math-container">\$Y=4\$</span>, <span class="math-container">\$W=12\$</span> as an example. First, we obtain a matrix with the dimensions <code>X × W*Y/X</code>:</p>
+<pre><code>     [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13] [,14] [,15] [,16]
+[1,]    0    3    6    9   12   15   18   21   24    27    30    33    36    39    42    45
+[2,]    1    4    7   10   13   16   19   22   25    28    31    34    37    40    43    46
+[3,]    2    5    8   11   14   17   20   23   26    29    32    35    38    41    44    47
+</code></pre>
+<p>Calculate the column-sums:</p>
+<pre><code>   3  12  21  30  39  48  57  66  75  84  93 102 111 120 129 138
+</code></pre>
+<p>Rearrange them into the matrix <code>Y × W/X</code>:</p>
+<pre><code>     [,1] [,2] [,3] [,4]
+[1,]    3   12   21   30
+[2,]   39   48   57   66
+[3,]   75   84   93  102
+[4,]  111  120  129  138
+</code></pre>
+<p>Calculate the column-sums:</p>
+<pre><code>228 264 300 336
+</code></pre>
+<p>Proceed with the next part of the sequence <code>Y*W</code> to <code>2*Y*W-1</code> etc.</p>
 </div>
 <div id="pu1" class="pu"><h1>APL+WIN, 52 bytes</h1>
 <p>Prompts for a vector of n,x,y and w/x. Outputs first n terms. Index origin = 0</p>
