--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240813T214515Z
+"   /golfscore                                      20240814T003803Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/245583.html">Expand a matrix goo-ily                         : 0245583</a>
 <a href="q/274938.html">Sums of X*Y chunks of the nonnegative integers  : 0274938</a>
 <a href="q/63834.html">Count up forever                                : 0063834</a>
 <a href="q/274924.html">Shift right by half a trit                      : 0274924</a>
