--- a/q/274924.html
+++ b/q/274924.html
@@ -26,12 +26,12 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>010</td><td>Jelly</td><td>240812T181812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274936#274936">Jonathan</a></td></tr>
-<tr d-ix="1"><td>189</td><td>Nibbles</td><td>240813T160923Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274958#274958">Dominic </a></td></tr>
-<tr d-ix="2"><td>015</td><td>05AB1E</td><td>240813T084855Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274955#274955">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>040</td><td>R</td><td>240812T190722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274937#274937">pajonk</a></td></tr>
-<tr d-ix="4"><td>025</td><td>APLDyalog Unicode</td><td>240813T060050Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274954#274954">akamayu</a></td></tr>
-<tr d-ix="5"><td>011</td><td>Nekomata + 1</td><td>240813T041130Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274950#274950">alephalp</a></td></tr>
+<tr d-ix="0"><td>010</td><td>Nekomata + n</td><td>240813T041130Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274950#274950">alephalp</a></td></tr>
+<tr d-ix="1"><td>010</td><td>Jelly</td><td>240812T181812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274936#274936">Jonathan</a></td></tr>
+<tr d-ix="2"><td>189</td><td>Nibbles</td><td>240813T160923Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274958#274958">Dominic </a></td></tr>
+<tr d-ix="3"><td>015</td><td>05AB1E</td><td>240813T084855Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274955#274955">Kevin Cr</a></td></tr>
+<tr d-ix="4"><td>040</td><td>R</td><td>240812T190722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274937#274937">pajonk</a></td></tr>
+<tr d-ix="5"><td>025</td><td>APLDyalog Unicode</td><td>240813T060050Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274954#274954">akamayu</a></td></tr>
 <tr d-ix="6"><td>049</td><td>Retina 0.8.2</td><td>240812T223756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274943#274943">Neil</a></td></tr>
 <tr d-ix="7"><td>016</td><td>Charcoal</td><td>240812T214353Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274941#274941">Neil</a></td></tr>
 <tr d-ix="8"><td>057</td><td>APL+WIN</td><td>240812T172556Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274934#274934">Graham</a></td></tr>
@@ -42,7 +42,38 @@
 <tr d-ix="13"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
 <tr d-ix="14"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 13 </s> 10 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-n</code>, 10 bytes</h1>
+<pre><code>R~3DᵉlhÖ*ž
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJunlLsgqWlJWm6FuuC6oxdHm7tzMk4PE3r6L4lxUnJxVCpBdsMuAy5jLiMzLiMzLlMjblMTbgMjY3NIbIA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>A port of <a href="https://codegolf.stackexchange.com/a/274958/9288">@Dominic van Essen's implementation</a> of <a href="https://codegolf.stackexchange.com/a/274936/9288">@Jonathan Allan's approach</a>.</p>
+<pre><code>R~3DᵉlhÖ*ž
+R~              Choose a number from 1 to the input
+  3D            Convert to base 3
+    ᵉl          Take the last digit
+      h         Take the first digit
+       Ö        Mod the first digit by 2
+        *       Multiply that by the last digit
+         ž      Check that the result is 0
+</code></pre>
+<p><code>-n</code> counts the number of valid solutions.</p>
+<hr />
+<h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-1</code>, 11 bytes</h1>
+<pre><code>3D3UXᶜi3bᵖ≥
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpKuoVLsgqWlJWm6FhuNXYxDIx5um5NpnPRw67RHnUuXFCclF0NlF2wz4DLkMuIyMuMyMucyNeYyNeEyNDY2h8gCAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre><code>3D3UXᶜi3bᵖ≥
+3D              Convert to base 3
+  3UX           Bitwise xor with [3]
+                    If the input is 0, the digits are [], so this is [3]
+                    For other inputs, this simply bitxor the first digit with 3
+     ᶜi         Optionally drop the last digit
+       3b       Convert from base 3
+         ᵖ≥     Check that the result &lt;= the input
+</code></pre>
+<p><code>-1</code> finds the first valid solution.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 13 </s> 10 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <p>-3 bytes porting <a href="https://codegolf.stackexchange.com/users/95126/dominic-van-essen">Dominic van Essen's</a> implementation of my approach.</p>
 <pre><code>b3ḢḂȧ%3¬)S
 </code></pre>
@@ -80,7 +111,7 @@ b3         -   convert {I} to base three
             ċ - count occurrences of {N}
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 18 nibbles (9 bytes)</h1>
+<div id="pu2" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 18 nibbles (9 bytes)</h1>
 <pre><code>,|,$~*%$3- 2/`@3
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWG3RqdFTqtFRVjHUVjPQTHIwhwlDZBRsNuAy5jLiMzLiMzLlMjblMTSASAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -99,7 +130,7 @@ b3         -   convert {I} to base three
              `@3$   #     element in base 3
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>_+3Bć©3αì®i¨}3ö
 </code></pre>
 <p><a href="https://tio.run/##ASEA3v9vc2FiaWX//18rM0LEh8KpM86xw6zCrmnCqH0zw7b//zA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##AUYAuf9vc2FiaWX/dnk/IiDihpIgIj95RP9fKzNCxIfCqTPOscOswq5pwqh9M8O2/yz/WzAsMSwyLDI2LDI3LDUzLDU0LDEzMzdd" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -121,7 +152,7 @@ b3         -   convert {I} to base three
                 # (which is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>41</s> 40 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>41</s> 40 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>`?`=\(n)`if`(n&lt;2,0,(k=?n-1)+!n%/%3-?1+k)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3NRLsE2xjNPI0EzLTEjTybIx0DHQ0sm3t83QNNbUV81T1VY117Q21szWh6qvSNAw0lRV07RQMuNI0DBFMIwjTkIsrJ7GgIKdSw9DK0EwnTZOLSxkoaQaVNQfzzKE8CxDP1BjCMzID80ygPLBKQ2NjqFozCwuICxYsgNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -130,26 +161,11 @@ b3         -   convert {I} to base three
 <pre class="lang-r prettyprint-override"><code>f=\(n)`if`(n&lt;2,0,f(n-1)+(n%/%3==f(1+f(n-1))))
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>25 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu5" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>25 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>Direct implementation of the problem description.</p>
 <pre><code>(3⊥3|(-1=⊃)↓+⍨@1)3⊥⍣¯1⌈∘1
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=0zB@1LXUuEZD19D2UVez5qO2ydqPelc4GGqCxB/1Lj603vBRT8ejjhmGAA&amp;f=Szu0wkDBUMFIwchMwchcwdRYwdREwdDY2BwA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
-</div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-1</code>, 11 bytes</h1>
-<pre><code>3D3UXᶜi3bᵖ≥
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpKuoVLsgqWlJWm6FhuNXYxDIx5um5NpnPRw67RHnUuXFCclF0NlF2wz4DLkMuIyMuMyMucyNeYyNeEyNDY2h8gCAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<pre><code>3D3UXᶜi3bᵖ≥
-3D              Convert to base 3
-  3UX           Bitwise xor with [3]
-                    If the input is 0, the digits are [], so this is [3]
-                    For other inputs, this simply bitxor the first digit with 3
-     ᶜi         Optionally drop the last digit
-       3b       Convert from base 3
-         ᵖ≥     Check that the result &lt;= the input
-</code></pre>
-<p><code>-1</code> prints the first valid solution.</p>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 49 bytes</h1>
 <pre><code>.+
