--- a/q/274209.html
+++ b/q/274209.html
@@ -54,6 +54,16 @@
 <pre><code>;s#òd)kE
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LSE&amp;code=O3Mjf/JkKWtF&amp;input=MTU3MDYxMzc0" rel="nofollow noreferrer">Try it</a></p>
+<pre><code>;s#òd)kE     :Implicit input of integer
+ s            :Convert to string in base
+  #          :  127 (note the unprintable after the #)
+    ò         :  Range [0,127]
+     d        :    Character at each codepoint
+      )       :End base conversion
+       k      :Remove characters in
+;       E     :  ASCII
+              :Implicit output of logical NOT of resulting string
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>35</s> 34 bytes</h1>
 
