--- a/q/274938.html
+++ b/q/274938.html
@@ -52,6 +52,12 @@ function(n,l,w,h){
 </code></pre>
 <p>and gradually re-arranged from there.</p>
 <p>The final golfed form seems quite similar to some answers in other languages, and I suspect that different initial approaches will converge to similar shortest re-arranged structures...</p>
+<hr />
+<h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a> + <code>pryr</code>, 44 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>f(y*x*((y*g-g+1)*x/2+n%/%g*g*x*y+n%%g*x-.5))
+</code></pre>
+<p><a href="https://rdrr.io/snippets/embed/?code=library(%22pryr%22)%0Axychunks%3Df(y*x*((y*g-g%2B1)*x%2F2%2Bn%25%2F%25g*g*x*y%2Bn%25%25g*x-.5))%0Ax%3D3%3By%3D4%3Bg%3D4%0Asapply(0%3A10%2Cfunction(n)xychunks(g%2Cn%2Cx%2Cy))" rel="nofollow noreferrer">Try it at rdrr.io</a></p>
+<p>Same as above, but the using the <code>pryr</code> package to <a href="https://rdrr.io/cran/pryr/man/f.html" rel="nofollow noreferrer">'guess'</a> the function arguments from the code.</p>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript, <s>50</s> 47 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;x*y*(x*n/w*w*y+(w*~-y+~-x)/2n+x*n%w)
