--- a/q/274938.html
+++ b/q/274938.html
@@ -38,7 +38,7 @@
 <tr d-ix="9"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>85</s> 82 bytes</h1>
-<p>-3 bytes thank to <a href="https://codegolf.stackexchange.com/users/55372/pajonk">pajonk</a></p>
+<p>-3 bytes thanks to <a href="https://codegolf.stackexchange.com/users/55372/pajonk">pajonk</a></p>
 <pre class="lang-r prettyprint-override"><code>\(x,y,w,`[`=matrix,s=colSums)repeat show(s(s(((y*w*F):(y*w*(F=F+1)-1))[x])[y,,T]))
 </code></pre>
 <p>Just to see the source and the bytecount:
