--- a/q/274973.html
+++ b/q/274973.html
@@ -37,6 +37,15 @@
 <p>We are using a parser to do this <code>ysk</code> will repeatedly apply a parser until reaching a fixed point, so we just need to write a parser which does one step of the task.</p>
 <p>Parsers generally prioritize parsing more than less, so to find the earliest occurence what we actually do is run everything in reverse. <code>zz</code> with <code>rv</code> sandwiches our parser between reversals. So now we want to eliminate the loop with the latest first value rather than the earliest second value.</p>
 <p>To do this we start with a <code>h'</code>, which will parse up to the start of the loop, prioritising longer parses (later starts). Then the loop itself is <code>yS$hdS&lt;*h'</code>, i.e. parse a character, parse some number of characters, parse the same character again returning only the last parse.  Then we have <code>h'</code> just to complete the rest of the string.</p>
+<h1>Reflection</h1>
+<p>There's definitely some room for improvement on hgl that we see in this answer.</p>
+<ul>
+<li>This would be shorter with a regex if hgl flavored regexes could handle back-references. Implementing that is a big undertaking, but I always have to mention it.</li>
+<li>There could be a function to sandwich a parser between two copies of another parser. Basically
+<pre><code>f x y = fo [x, y, x]
+</code></pre>
+And it should probably have preloaded variants for <code>h'</code> and <code>h_</code>.</li>
+</ul>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> v2.0a0, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>e/(.).*\1/Ï
