--- a/q/274973.html
+++ b/q/274973.html
@@ -26,16 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>029</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
+<tr d-ix="0"><td>028</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
 <tr d-ix="1"><td>044</td><td>JavaScript ES6</td><td>240814T150830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274977#274977">Arnauld</a></td></tr>
 <tr d-ix="2"><td>011</td><td>Japt v2.0a0</td><td>240814T141527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274974#274974">noodle p</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>31</s> <s>30</s> 29 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>31</s> <s>30</s> <s>29</s> 28 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>k=Rv h'
 </code></pre>
-<pre><code>ysk$fo[k,yS$hdS&lt;*k,k]
+<pre><code>ysk$k&lt;&gt;yS(hdS&lt;*k)&lt;&gt;k
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=TU4xjsIwEOz9ihFC4g4lRRKKK0jDCyIoEUJObCuWkzgkDsI8gg_QpEH3jHsHvzkLo9ztrrSzM7OrvX-XtFe8qsbnRtat7gxOA62kkJwh63g1ME7eQkbCEI020A2o0bDcENsrpLC2wBq9egxGhF8_Kt2eUS6ISJ08F3qvArubl2y3XqpAHbzreaupbNwy0wSoj_hoO3dEfLoJ2GN2mb1Q4JCLaZDa50REcbJK4ujPba--_jviKImSeGJoXuR5wTjlvPDk-6tx9P0X" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8FNp8zcgvyiEoXC0sSczLTM1BSFgKLUnNKUVC6oRACXrq5CXn6JQn6eQmJJvkJlaglXZXG2gq1CZWWygo1CcfbS0pI0XYt92bZBZQoZ6lxptkBplWwbu8pgjYyUYButbE0bO6iim325iZl5QL0p-VwKCrnxChoFRUAz0jSBPAWFaAWlCiUwSwfIAgI4JzMfAuEChkbGJsZGhgjVlVUQhKzCyNDY0NgILpKYlJyUlJySmpiamgwRjIW4asECCA0A" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <h2>Explanation</h2>
 <p>We are using a parser to do this <code>ysk</code> will repeatedly apply a parser until reaching a fixed point, so we just need to write a parser which does one step of the task.</p>
 <p>As I point out in <a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#comment591483_274973">my comment</a> it doesn't matter if you prioritize loops by their start or end location.</p>
@@ -47,7 +47,7 @@
 <li>This would be shorter with a regex if hgl flavored regexes could handle back-references. Implementing that is a big undertaking, but I always have to mention it.</li>
 <li>Since I am defining <code>k</code> here, there's probably good cause to have <code>Rv h'</code> as a built-in, and might as well add <code>Rv h_</code> too.</li>
 <li>There could be a function to sandwich a parser between two copies of another parser. Basically
-<pre><code>f x y = fo [x, y, x]
+<pre><code>f x y = x &lt;&gt; y &lt;&gt; x
 </code></pre>
 And it should probably have preloaded variants for <code>h'</code> and <code>h_</code>.</li>
 </ul>
