--- a/q/256034.html
+++ b/q/256034.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>000</td><td>Python 3</td><td>240728T010022Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/274479#274479">aeh5040</a></td></tr>
+<tr d-ix="0"><td>004</td><td>Python 3</td><td>240728T010022Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/274479#274479">aeh5040</a></td></tr>
 <tr d-ix="1"><td>031</td><td>Python 3</td><td>230101T232226Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/256250#256250">DialFros</a></td></tr>
 <tr d-ix="2"><td>024</td><td>Julia 1.0</td><td>230101T231350Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/256249#256249">DialFros</a></td></tr>
 <tr d-ix="3"><td>084</td><td>Python 3</td><td>221226T122950Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/256042#256042">corvus_1</a></td></tr>
@@ -45,9 +45,20 @@
 <tr d-ix="16"><td>061</td><td>Factor + math.combinatorics</td><td>221226T120024Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/256040#256040">chunes</a></td></tr>
 <tr d-ix="17"><td>159</td><td>Python 3</td><td>221226T112447Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/256038#256038">U13-Forw</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 0 bytes</h1>
-<h3>Probably cheating, for the reason pointed out by @emanresu A in the comment (perhaps among others). But I'll leave it here for entertainment!</h3>
-<p>Items in identity order, to be concatenated and fed to the interpreter (only difference between them is in the last string literal):</p>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 4 bytes</h1>
+<h6>Modified as suggested by lyxal in the comments to get round the functions-as-constants loophole. Possibly still cheating, since quoted text of functions still sound a lot like &quot;complete/partial functions&quot;.</h6>
+
+<pre class="lang-python prettyprint-override"><code>exec
+</code></pre>
+<p>Items in identity order, to be concatenated as strings and fed to the function (only difference between them is in the string literal at the end):</p>
+<p><code>&quot;(lambda x=0:(lambda y:lambda z:print((lambda p:'I'if p in'123'else'K'if p in'032 301 210'else'A'if p in'231 312 203 320 013 130 021 102'else'S')(x()+y()+z())))if isinstance(x,type(lambda:0))else'0')&quot;</code></p>
+<p><code>&quot;(lambda x=0:(lambda y:lambda z:print((lambda p:'I'if p in'123'else'K'if p in'032 301 210'else'A'if p in'231 312 203 320 013 130 021 102'else'S')(x()+y()+z())))if isinstance(x,type(lambda:0))else'1')&quot;</code></p>
+<p><code>&quot;(lambda x=0:(lambda y:lambda z:print((lambda p:'I'if p in'123'else'K'if p in'032 301 210'else'A'if p in'231 312 203 320 013 130 021 102'else'S')(x()+y()+z())))if isinstance(x,type(lambda:0))else'2')&quot;</code></p>
+<p><code>&quot;(lambda x=0:(lambda y:lambda z:print((lambda p:'I'if p in'123'else'K'if p in'032 301 210'else'A'if p in'231 312 203 320 013 130 021 102'else'S')(x()+y()+z())))if isinstance(x,type(lambda:0))else'3')&quot;</code></p>
+<p><a href="https://tio.run/##3Y@7CsMwDEX3foXIYpt20GMzZOhYOnbNkqYONaSuaTLE@fk05PUREQhddHVBJ6bu/Q0y1nkxut5VY62LU6ab8vN8ldDnaDed7CoGG38@dHozolU35WuI4IMiFuWa1qn7vkJhECRgwsW67hYLgRADo4AwApIAyTSZgJCX84cyutfmnKYetJlqivvWh7YrQ@V0f@lSdOs3Fo2ZU6xMVpyOwSIHYsEDsdDMYsY/" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 0 bytes</h1>
+<h6>Even more cheaty, for the reason pointed out by @emanresu A in the comment (perhaps among others). But I'll leave it here for entertainment!</h6>
+<p>Items in identity order, to be concatenated and fed to the interpreter:</p>
 <p><code>(lambda x=0:(lambda y:lambda z:print((lambda p:'I'if p in'123'else'K'if p in'032 301 210'else'A'if p in'231 312 203 320 013 130 021 102'else'S')(x()+y()+z())))if isinstance(x,type(lambda:0))else'0')</code></p>
 <p><code>(lambda x=0:(lambda y:lambda z:print((lambda p:'I'if p in'123'else'K'if p in'032 301 210'else'A'if p in'231 312 203 320 013 130 021 102'else'S')(x()+y()+z())))if isinstance(x,type(lambda:0))else'1')</code></p>
 <p><code>(lambda x=0:(lambda y:lambda z:print((lambda p:'I'if p in'123'else'K'if p in'032 301 210'else'A'if p in'231 312 203 320 013 130 021 102'else'S')(x()+y()+z())))if isinstance(x,type(lambda:0))else'2')</code></p>
