--- a/q/274973.html
+++ b/q/274973.html
@@ -26,13 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>047</td><td>Python</td><td>240814T160801Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274979#274979">Albert.L</a></td></tr>
+<tr d-ix="0"><td>045</td><td>Python</td><td>240814T160801Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274979#274979">Albert.L</a></td></tr>
 <tr d-ix="1"><td>012</td><td>Retina 0.8.2</td><td>240814T155417Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274978#274978">Neil</a></td></tr>
 <tr d-ix="2"><td>028</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
 <tr d-ix="3"><td>044</td><td>JavaScript ES6</td><td>240814T150830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274977#274977">Arnauld</a></td></tr>
 <tr d-ix="4"><td>011</td><td>Japt v2.0a0</td><td>240814T141527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274974#274974">noodle p</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 47 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 45 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>lambda x:re.sub(r&quot;(.).*\1&quot;,r&quot;\1&quot;,x)
+import re
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=VY5BCsIwEEX3OcXQVSJpMYkLEfQEPUJBkphiQJsQI6Rdews3BdE7eRsttaJ_hlk8_oO5Pnwb967pb_W6up9jnS-f-UEe1U5CWgVTnM4KhwwXpJhVLKMhG24iyB69CxGC-UiidgFKsA04bxo8JysElm6pgzWUxckfbMQEgQ-2ibjGllBHRrV_XhL8JN9AQumdf2LdOBOxDjEuFoKzb4mh1HbjTlrbDS3OBBN8agmOpNJK6Z2RxuiBSaPHZ14" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>I no longer think the non-greediness of my first attempt below is necessary nor that overlap may be a problem.</p>
+<h3><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 47 bytes</h3>
 <pre class="lang-python prettyprint-override"><code>lambda x:re.sub(r&quot;(.).*?(?=\1)&quot;,&quot;&quot;,x)
 import re
 </code></pre>
