--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240814T200850Z
+"   /golfscore                                      20240814T201012Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/242666.html">Is given number a concat of two squares         : 0242666</a>
 <a href="q/120897.html">How long is my number?                          : 0120897</a>
 <a href="q/274938.html">Sums of X*Y chunks of the nonnegative integers  : 0274938</a>
 <a href="q/274973.html">Erase the loops                                 : 0274973</a>
